fix: Library icon font loading issues on iOS (v0.9.81.67)
- Fixed font paths from ~static to absolute paths
- Corrected font format from 'ttf' to 'truetype'
- Added iOS-specific font loading with Font Loading API
- Removed emoji fallbacks that interfered with icon display
- Added explicit icon content definitions in component

--- a/assets/absicons.css
+++ b/assets/absicons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'absicons';
-  src: url('~static/fonts/absicons/absicons.eot?2jfq33');
-  src: url('~static/fonts/absicons/absicons.eot?2jfq33#iefix') format('embedded-opentype'),
-    url('~static/fonts/absicons/absicons.ttf?2jfq33') format('truetype'),
-    url('~static/fonts/absicons/absicons.woff?2jfq33') format('woff'),
-    url('~static/fonts/absicons/absicons.svg?2jfq33#absicons') format('svg');
+  src: url('/fonts/absicons/absicons.eot?2jfq33');
+  src: url('/fonts/absicons/absicons.eot?2jfq33#iefix') format('embedded-opentype'),
+    url('/fonts/absicons/absicons.ttf?2jfq33') format('truetype'),
+    url('/fonts/absicons/absicons.woff?2jfq33') format('woff'),
+    url('/fonts/absicons/absicons.svg?2jfq33#absicons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
